# safir

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
migrations/: 20240620173629_create_db.sql
safir/: CHANGELOG.md  Cargo.toml  README.md
safir-core/: Cargo.toml  LICENSE-MIT  README.md
safir-core/src/: config.rs  disk.rs  lib.rs  mem.rs  utils.rs
safir-mem/: CHANGELOG.md  Cargo.toml  README.md
safir-mem/src/: cfg.rs  cli.rs  main.rs  safir.rs  utils.rs
safir/src/: cfg.rs  cli.rs  main.rs  safir.rs  store.rs  utils.rs
src/: cfg.rs  cli.rs  main.rs  safir.rs  store.rs  utils.rs
src/store/: config.rs  db_store.rs  file_store.rs  mod.rs
