[package]
name = "safir"
version = "0.9.0"
edition = "2021"
authors = ["Graham Keenan graham.keenan@outlook.com"]
license = "MIT OR Apache-2.0"
description = "Key/Value store to share values between different shell sessions"
readme = "README.md"
homepage = "https://github.com/Tyrannican/safir"
repository = "https://github.com/Tyrannican/safir" 
keywords = ["cli", "terminal", "utility", "key-value", "store"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.2.5" , features = ["derive"] }
anyhow = "1.0.75"
dirs = "5.0.1"
serde_json = "1.0.108"
