[package]
name = "safir"
version = "0.11.0"
edition = "2021"
authors = ["Graham Keenan <graham.keenan@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "CLI Key/Value store backed by an SQLite3 DB"
readme = "README.md"
homepage = "https://github.com/Tyrannican/safir"
repository = "https://github.com/Tyrannican/safir" 
keywords = ["cli", "utility", "key-value", "store", "database"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.2.5" , features = ["derive"] }
anyhow = "1.0.75"
dirs = "5.0.1"
serde_json = "1.0.108"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
async-trait = "0.1.80"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
