[package]
name = "safir-core"
version = "0.2.1"
edition = "2021"
description = "Internal lib used to build Safir and Safir-mem"
authors = ["Graham Keenan graham.keenan@outlook.com"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Tyrannican/safir"
repository = "https://github.com/Tyrannican/safir" 
keywords = ["terminal", "utility", "key-value", "store", "library"]
categories = ["command-line-interface"]

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
colored = "2.0.4"
dirs = "5.0.1"
psutil = "3.2.2"
rubin = "0.3.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
sysinfo = "0.29.9"
tokio = { version = "1.32.0", features = ["full"] }
which = "4.4.0"
