[package]
name = "safir"
version = "0.8.1"
edition = "2021"
authors = ["Graham Keenan graham.keenan@outlook.com"]
license = "MIT OR Apache-2.0"
description = "Key/Value store to share values between different shell sessions"
readme = "README.md"
homepage = "https://github.com/Tyrannican/safir"
repository = "https://github.com/Tyrannican/safir" 
keywords = ["cli", "terminal", "utility", "key-value", "store"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5" , features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
safir-core = { version = "0.2.2", path = "../safir-core" }
anyhow = "1.0.75"
